Make menu stay fixed relative to the window in the vertical direction.
The menu stays in a fixed position when you scroll and will adjust to
screen size changes. When the screen is too small, it adjusts so that
it appears on top of the content. The only thing left to do is to use
@media queries to ensure it starts off correctly if the screen is too
small.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,6 +33,7 @@ $width: 400px;
     -webkit-box-shadow: 0px 3px 20px 0px rgba(150, 150, 200, .1);
     box-shadow: 0px 3px 20px 0px rgba(150, 150, 150, .1);
     margin-bottom:35px;
+    position: relative;
 
   }
   div #profile #links{
